// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Price reducer Should set the cost 1`] = `
Object {
  "cost": 10,
  "description": "",
  "position": "prefix",
  "symbol": "$",
}
`;

exports[`[STORE] - Price reducer Should set the cost description 1`] = `
Object {
  "cost": "",
  "description": "Cost description",
  "position": "prefix",
  "symbol": "$",
}
`;

exports[`[STORE] - Price reducer Should set the cost symbol 1`] = `
Object {
  "cost": "",
  "description": "",
  "position": "prefix",
  "symbol": "€",
}
`;

exports[`[STORE] - Price reducer Should set the symbol position 1`] = `
Object {
  "cost": "",
  "description": "",
  "position": "prefix",
  "symbol": "$",
}
`;

exports[`[STORE] - Price reducer Should toggle the prefix of the position 1`] = `
Object {
  "cost": "",
  "description": "",
  "position": "suffix",
  "symbol": "$",
}
`;
